crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0412_malformed.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0412]: `q` has no place in a format spec — the grammar is `[[fill]align][+][0][width][.precision][type]` with type one of `b o x X e E f`
 --> mem:///main.lu:3:15
  |
3 |     print("[{n:>8q}]")
  |               ^^^^ in this format spec
  |
