crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0413_hex_on_str.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0413]: `x` renders an integer in another base, and this value is `str`
 --> mem:///main.lu:3:15
  |
3 |     print("[{s:x}]")
  |               ^^ in this format spec
  |
