crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0413_precision_on_int.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0413]: `.precision` means digits-after-the-point on a float and a byte cap on a `str`; this value is an integer
 --> mem:///main.lu:3:15
  |
3 |     print("[{n:.2}]")
  |               ^^^ in this format spec
  |
