crates/wolf_sema/tests/snapshots/typecheck_diagnostics__e0414_main_params.snap
---
source: crates/wolf_sema/tests/typecheck_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0414]: `main` is the entry the process calls, and the process hands it no arguments — this one wants 1
 --> mem:///main.lu:1:4
  |
1 | fn main(x: int) -> int {
  |    ^^^^ declared with parameters here
  |
  = note: the entry's legal shapes: `fn main()`, `fn main() -> int`, `fn main() -> !int` (and
    `!()` / an explicit error row over `int` or `()`). An ok value becomes the exit status;
    an error value prints `error: <tag>` and exits 1 (D30).
